--- a/local/templates/aspro_next/styles.css
+++ b/local/templates/aspro_next/styles.css
@@ -143,7 +143,7 @@ a.icon-text:focus { color: #fff; }
 .more_page_buttons_block .btn{margin:0 10px 10px 0;}
 .btn.bold{font-weight:bold;}
 .btn > *{-moz-transition:background-color 0.3s;-ms-transition:background-color 0.3s;-o-transition:background-color 0.3s;-webkit-transition:background-color 0.3s;transition:background-color 0.3s;}
-.btn-lg{padding: 10px 25px 10px;font-weight:bold;}
+.btn-lg{padding-top:10px;}
 .btn.btn-lg{font-size:14px;}
 .btn-sm{padding:6px 15px 6px;font-size:12px;}
 .btn.btn-sm{font-weight:normal;}
