--- a/local/templates/aspro_next/components/bitrix/catalog/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog/main/style.css
@@ -13,13 +13,14 @@
     background: #f8f8f9;
     position: relative;
     display: block;
-    padding: 11px 31px 13px 17px;
+    /*padding: 11px 31px 13px 17px*/
     background: #f9f9f9;
     text-decoration: none;
     text-align: left;
     color: #333333;
-    font-size: 13px;
+    font-size: 12px;
     white-space: normal;
+    padding 1px 1px 1px 1px;
 }
 
 .horisontale_filter>li>a:before{
