--- a/local/templates/aspro_next/styles.css
+++ b/local/templates/aspro_next/styles.css
@@ -169,7 +169,7 @@ a.icon-text:focus { color: #fff; }
 .btn.btn-transparent-border:hover{color:#fff;}
 .btn.white.grey{color:#888888 !important;border:1px solid #aaaaaa;background:#ffffff;}
 .to-order, .to-subscribe, .in-cart, .in-subscribe{display:block;}
-.btn.btn-default.in-cart, .btn.btn-default.in-cart:hover{background: #4fad00;border-color: #4fad00;}
+.btn.btn-default.in-cart, .btn.btn-default.in-cart:hover{background: #4fad00;border-color: #4fad00; display:inline-block;}
 .btn.btn-default:focus:active{color:#fff;}
 .btn.btn-default.transparent.white:not(:hover){background: transparent;}
 footer#footer{
