CP-5569: catalog detail / css fixes

--- a/local/templates/aspro_next/styles.css
+++ b/local/templates/aspro_next/styles.css
@@ -143,7 +143,7 @@ a.icon-text:focus { color: #fff; }
 .more_page_buttons_block .btn{margin:0 10px 10px 0;}
 .btn.bold{font-weight:bold;}
 .btn > *{-moz-transition:background-color 0.3s;-ms-transition:background-color 0.3s;-o-transition:background-color 0.3s;-webkit-transition:background-color 0.3s;transition:background-color 0.3s;}
-.btn-lg{padding-top:10px;}
+.btn-lg{padding-top:10px; height: 40px;width:210px;}
 .btn.btn-lg{font-size:14px;}
 .btn-sm{padding:6px 15px 6px;font-size:12px;}
 .btn.btn-sm{font-weight:normal;}
@@ -169,7 +169,7 @@ a.icon-text:focus { color: #fff; }
 .btn.btn-transparent-border:hover{color:#fff;}
 .btn.white.grey{color:#888888 !important;border:1px solid #aaaaaa;background:#ffffff;}
 .to-order, .to-subscribe, .in-cart, .in-subscribe{display:block;}
-.btn.btn-default.in-cart, .btn.btn-default.in-cart:hover{background: #4fad00;border-color: #4fad00; display:inline-block;}
+.btn.btn-default.in-cart, .btn.btn-default.in-cart:hover{background: #4fad00;border-color: #4fad00; display:inline-block; margin-top:2px; width:210px;}
 .btn.btn-default:focus:active{color:#fff;}
 .btn.btn-default.transparent.white:not(:hover){background: transparent;}
 footer#footer{
