--- a/local/templates/aspro_next/components/bitrix/catalog.smart.filter/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog.smart.filter/main/style.css
@@ -43,7 +43,7 @@ div.bx_filter_parameters_box_container:not(.numbers) .divider {
     /* line-height: 14px; */
     margin-left: 21px;
     text-align: left;
-    font-weight: normal;
+    font-weight: bold;
 	font-size: 13px;
     color: #666;
 	cursor: pointer;
