SUP-8051:edit style

--- a/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
@@ -67,3 +67,6 @@ button.btn-get_discount{
     top: -27px;
     position: relative;
 }
+.viewed_product_block .title_block.sm{
+    margin-left: 80px; 
+}
