SUP-8051: edit style

--- a/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
@@ -70,3 +70,6 @@ button.btn-get_discount{
 .viewed_product_block .title_block.sm{
     margin-left: 80px; 
 }
+.viewed_product_block{
+    clear: both;
+}
