SUP-8252: add ajax count kbm value

--- a/local/templates/aspro_next/styles.css
+++ b/local/templates/aspro_next/styles.css
@@ -186,3 +186,7 @@ padding-bottom: 0;
     font-size:16px;
     font-weight:bold;
 }
+.upak_count {
+    margin-top: -48px;
+    margin-left: 187px;
+}
